Fix the bad padding / margins.
There was far too much padding / margin between bars and the main window
area.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -24,23 +24,19 @@
     font-family: UbuntuMono;
     font-size: 13px;
     font-weight: bold;
+    min-height: 0;
 }
 
 window#waybar {
     border: 0px solid rgba(0, 0, 0, 0);
-    /* border-radius: 10px; */
-    /* background:#2d2a2e; */
-    /* background-color: rgba(36, 39, 58, 0.85); */
     background-color: rgba(0, 0, 0, 0);
-    /* background-color: shade(#1e1e2e, 0.95); */
 }
 
 #workspaces button {
     color: @base;
     border-radius: 50%;
-    /* background-color: @base; */
-    margin: 0px 0px;
-    padding: 8 8 8 8;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 #workspaces button:hover {
@@ -67,9 +63,7 @@ window#waybar {
     background-color: @base;
     opacity: 1;
     border-radius: 8px;
-    padding: 0px 4px 0px 4px;
-    /*margin: 0px 8px 8px 8px;*/
-    margin: 8px 10px;
+    margin-left: 8px;
 }
 
 #workspaces button.focused {
@@ -84,7 +78,6 @@ window#waybar {
 #mode {
     color: #ebcb8b;
     padding: 8px;
-    margin: 8px 10px;
 }
 
 #clock,
@@ -109,7 +102,6 @@ window#waybar {
     background-color: shade(@base, 1);
     opacity: 1;
     padding: 8px;
-    margin: 8px 0px 8px 0px;
 }
 
 /* -----------------------------------------------------------------------------
@@ -118,16 +110,12 @@ window#waybar {
 #mode {
     border-radius: 10px;
     color: @crit;
-    margin-right: 5px;
     padding: 8px;
-    margin: 8px 10px;
 }
 
 #taskbar {
     border-radius: 10px;
-    margin-right: 5px;
     padding: 8px;
-    margin: 8px 0px 8px 0px;
 }
 
 #taskbar button.focused {
@@ -192,8 +180,6 @@ window#waybar {
 #network {
     border-radius: 10px;
     margin-right: 5px;
-    padding: 8px;
-    margin: 8px 0px 8px 0px;
 }
 
 #network.disconnected {
@@ -213,9 +199,8 @@ window#waybar {
 }
 
 #tray {
-    margin: 8px 10px;
-    padding: 8px;
     border-radius: 10px;
+    margin-right: 8px;
 }
 
 #window {
